--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </style>
 </head>
 <body>
-<h1>Nassi-Shneiderman Diagram Reverse Engeneering Compiler</h1>
+<h1>Nassi-Shneiderman Diagram Reverse Engineering Compiler</h1>
 <div id="container">
 <div>
 <textarea id="code-block" placeholder="Write your Javascript..."></textarea><br>
@@ -46,7 +46,6 @@
 <script>
     var svgContainer = document.getElementById('canvas');
     
-
     //Manual creation of a Nassi-Shneiderman diagram
     /*svgContainer.innerHTML += createSequenceBlock(10, 10, 300, 50, "Start").svgAppendix;
     var block = createDecisionBlock(10, 60, 300, 100, "Was ist Schwerer", "1 Kg Federn", "1 Kg Gold");
