--- a/index.html
+++ b/index.html
@@ -39,30 +39,25 @@
 <div id="container">
 <div>
 <textarea id="code-block" placeholder="Write your Javascript..." >
-if (x smaller than 200) {
-    if (x % 5 == 0) {
-    print(yees);
+    print(x);
+    while(x < 1) {
+      x += 1;
+      if (x == 0) {
+        print(0)
+      }
+      else {
+        if (x == 5) {
+          print(ist 5)
+        }
+        else {
+          print(nicht 5)
+        }
+      }
     }
-    else {
-    print(ups);
-    }
-}
-else {
-    print(nothing to worry about);
-}
-print(Halfway done);
-
-if (time == too late) {
-    syso(its too late)
-}
-else {
-    if (es gibt was zum Nachdenken) {
-    warum();
-    }
-    else {
-    dann ins bett();
-    }
-}
+    do {
+      print(nix)
+    } while (xxx)
+    print(done)
 </textarea><br>
 
 </div>
